K8S/todo-flaskapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: mayaashkinazi/todo-flaskapp:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
